# ed

./: run.sh
arvore_binaria/headers/: binary_tree.h
arvore_binaria/implementations/: avl_tree.c
calculadora_num_complexos/: CMakeLists.txt  main.c
calculadora_num_complexos/headers/: num_complexos.h
calculadora_num_complexos/implementations/: num_complexos.c
fila/headers/: queue.h
fila/implementations/: dv_queue.c  ll_queue.c
lista_encadeada/headers/: linked_list.h
lista_encadeada/implementations/: circular_linked_list.c  doubly_linked_list.c  linked_list.c  singly_linked_list.c
matriz_dinamica/: CMakeLists.txt  main.c
matriz_dinamica/headers/: matriz.h
matriz_dinamica/implementations/: matriz.c
pilha/headers/: stack.h
pilha/implementations/: dv_stack.c  ll_stack..c
revisao_c/: quest_1.c  quest_2.c  quest_5.c  quest_6.c  quest_7.c  quest_8.c
revisao_c/unfinished/: quest_10.c  quest_3.c  quest_4.c
vetor_dinamico/: CMakeLists.txt
vetor_dinamico/implementations/: vetor.c
